# posit-neuralnet

./: .gitignore  LICENSE  README.md
examples/: CMakeLists.txt
examples/cifar100_cifarnet/: CMakeLists.txt
examples/cifar100_cifarnet/dataset/: download.sh
examples/cifar100_cifarnet/include/: Cifar100Data.hpp  CifarNet_float.hpp  CifarNet_posit.hpp  test_float.hpp  test_posit.hpp
examples/cifar100_cifarnet/net/example/: model_epoch_0_float.pt  model_epoch_10_float.pt  model_epoch_11_float.pt  model_epoch_12_float.pt  model_epoch_13_float.pt  model_epoch_14_float.pt  model_epoch_15_float.pt  model_epoch_16_float.pt  model_epoch_17_float.pt  model_epoch_18_float.pt  model_epoch_19_float.pt  model_epoch_1_float.pt  model_epoch_20_float.pt  model_epoch_2_float.pt  model_epoch_3_float.pt  model_epoch_4_float.pt  model_epoch_5_float.pt  model_epoch_6_float.pt  model_epoch_7_float.pt  model_epoch_8_float.pt  model_epoch_9_float.pt
examples/cifar100_cifarnet/src/: test_posit.cpp  train_float.cpp  train_posit.cpp
examples/cifar10_cifarnet/: CMakeLists.txt
examples/cifar10_cifarnet/include/: Cifar10Data.hpp  CifarNet_float.hpp  CifarNet_posit.hpp  test_float.hpp  test_posit.hpp
examples/cifar10_cifarnet/net/example/: model_epoch_0_float.pt  model_epoch_1_float.pt  model_epoch_2_float.pt  model_epoch_3_float.pt  model_epoch_4_float.pt  model_epoch_5_float.pt  model_epoch_6_float.pt  model_epoch_7_float.pt  model_epoch_8_float.pt
examples/cifar10_cifarnet/src/: test_posit.cpp  train_float.cpp  train_posit.cpp
examples/fashionmnist_lenet5/: CMakeLists.txt
examples/fashionmnist_lenet5/include/: test_float.hpp  train_posit.hpp
examples/fashionmnist_lenet5/net/example/: model_epoch_0_float.pt  model_epoch_10_float.pt  model_epoch_1_float.pt  model_epoch_2_float.pt  model_epoch_3_float.pt  model_epoch_4_float.pt  model_epoch_5_float.pt  model_epoch_6_float.pt  model_epoch_7_float.pt  model_epoch_8_float.pt  model_epoch_9_float.pt
examples/fashionmnist_lenet5/src/: test_posit.cpp  train_float.cpp  train_posit.cpp
examples/mnist_fcnn/: CMakeLists.txt
examples/mnist_fcnn/include/: FloatNet.hpp  PositNet.hpp  test_float.hpp  test_posit.hpp  train_float.hpp  train_posit.hpp
examples/mnist_fcnn/net/example/: model_epoch_0_float.pt  model_epoch_10_float.pt  model_epoch_1_float.pt  model_epoch_2_float.pt  model_epoch_3_float.pt  model_epoch_4_float.pt  model_epoch_5_float.pt  model_epoch_6_float.pt  model_epoch_7_float.pt  model_epoch_8_float.pt  model_epoch_9_float.pt
examples/mnist_fcnn/src/: test_posit.cpp  train_float.cpp  train_posit.cpp  train_test.cpp
examples/mnist_lenet5/: CMakeLists.txt  README.md
examples/mnist_lenet5/include/: LeNet5_float.hpp  LeNet5_posit.hpp  LeNet5_posit_scaling.hpp  test_float.hpp  test_posit.hpp  train_float.hpp  train_posit.hpp
examples/mnist_lenet5/net/example/: model_epoch_0_float.pt  model_epoch_10_float.pt  model_epoch_1_float.pt  model_epoch_2_float.pt  model_epoch_3_float.pt  model_epoch_4_float.pt  model_epoch_5_float.pt  model_epoch_6_float.pt  model_epoch_7_float.pt  model_epoch_8_float.pt  model_epoch_9_float.pt
examples/mnist_lenet5/src/: test_posit.cpp  train_float.cpp  train_posit.cpp  train_test.cpp
include/positnn/: positnn
include/positnn/activation/: LogSoftmax.hpp  ReLU.hpp  Sigmoid.hpp  Tanh.hpp
include/positnn/examples/: CMakeLists.txt  CustomDataset.hpp  Net.hpp  load_data.hpp
include/positnn/layer/: AdaptiveScale.hpp  AvgPool2d.hpp  BackScale.hpp  BatchNorm1d.hpp  Conv2d.hpp  Dropout.hpp  Layer.hpp  Linear.hpp  MaxPool2d.hpp  Parameter.hpp  RangeBatchNorm1d.hpp  alternative.MaxPool2d.hpp  backup.MaxPool2d.hpp  init.hpp
include/positnn/loss/: CrossEntropyLoss.hpp  Loss.hpp  MSELoss.hpp  NLLLoss.hpp
include/positnn/optimizer/: Optimizer.hpp  SGD.hpp  SGDMixed.hpp
include/positnn/tensor/: MixedTensor.hpp  StdTensor.hpp  Window.hpp  alternative.maximumpool.hpp  averagepool.hpp  backup.Window.hpp  backup_maximumpool.hpp  convert.hpp  convolution.hpp  matrix.hpp  maximumpool.hpp  new_Window.hpp  stats.hpp  sum.hpp
include/positnn/utils/: ArgumentParser.hpp  Quire.hpp  print_parameters.hpp  save_load.hpp  train_test_threads.hpp  type_name.hpp  utils.hpp
